module/VPC/nsg.tf
resource "aws_security_group" "untrusted" {
  name        = "untrusted"
  description = "Deny inbound traffic"
  vpc_id     = aws_vpc.vpc.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  tags = {
    Name = "untrusted"
  }
}
